fix: remove scrollbar-hidden

--- a/app/globals.css
+++ b/app/globals.css
@@ -84,10 +84,6 @@ input {
   @apply opacity-100 absolute
 }
 
-.scrollbar-hidden {
-  @apply 
-}
-
 @starting-style {
   .is-visible {
     @apply opacity-0
